Fixed some alignment issues in the navbar

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a:active {text-decoration: none;}
 	height: 6vh;
 	width: 15%;
 	justify-content: center;
+  align-items: center;
 	margin-right: 10px;
 	border-radius: 5px;
 	border-color: transparent;
@@ -71,9 +72,10 @@ a:active {text-decoration: none;}
 /* Name in the left corner of navbar. */
 .name {
 	display: flex;
-	height: 8vh;
+	height: 6vh;
 	width: 25%;
 	justify-content: center;
+  align-items: center;
 }
 
 .name h3 {
@@ -119,9 +121,9 @@ a:active {text-decoration: none;}
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
-	margin-top: 15vh;
+	margin-top: 6vh;
 	margin-left: 18vw;
-	height: 100px;
+	height: 70px;
 }
 
 @keyframes fontAnimation {
